--- a/Move.toml
+++ b/Move.toml
@@ -1,9 +1,9 @@
 [package]
-name = "quest_name"
+name = "price_oracle"
 version = "1.0.0"
 
 [addresses]
 overmind = "0x1337"
 
 [dependencies]
-AptosTokenObjects = { git = "https://github.com/aptos-labs/aptos-core.git", subdir = "aptos-move/framework/aptos-token-objects/", rev = "aptos-cli-v2.0.2" }
+AptosTokenObjects = { git = "https://github.com/aptos-labs/aptos-core.git", subdir = "aptos-move/framework/aptos-token-objects/", rev = "aptos-cli-v2.1.0" }
